--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,16 @@
     <string name="BodyLabel8">低脂肪</string>
     <string name="BodyLabelByYourself">自定</string>
     <string name="BodyEditHint">请输入</string>
+    <string name="my_index">我的主页</string>
+    <string name="my_statistics">我的统计</string>
+    <string name="my_manage">我的管理</string>
+    <string name="plan">计划</string>
+    <string name="student">学员</string>
+    <string name="mine">我的</string>
+    <string name="input_phone">请输入手机号</string>
+    <string name="input_password">请输入密码</string>
+    <string name="input_verification_code">请输入验证码</string>
+    <string name="recive_message_time">接受短信大概需要</string>
+    <string name="registe_hint">注册即表示你已同意《私教帮服务协议》</string>
 
 </resources>
