--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,14 @@
     <string name="input_verification_code">请输入验证码</string>
     <string name="recive_message_time">接受短信大概需要</string>
     <string name="registe_hint">注册即表示你已同意《私教帮服务协议》</string>
-
+    <string name="name">姓名</string>
+    <string name="sex">性别</string>
+    <string name="telephone">电话</string>
+    <string name="age">年龄</string>
+    <string name="height">身高</string>
+    <string name="weight">体重</string>
+    <string name="jiaoling">教龄</string>
+    <string name="adress">所在地</string>
+    <string name="club">健身房名称</string>
+    <string name="complete">完成</string>
 </resources>
