三个主页可以切换，但是效果不是很好，我问了老师说用fragment做，所以下一次提交用fragment做好了

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,6 @@
     <string name="normal_exercise">平时运动量</string>
     <string name="often_exercise">经常运动</string>
     <string name="contrast_photo">对比照片</string>
+    <string name="last_class">剩余课程</string>
+    <string name="complete_class">完成锻炼</string>
 </resources>
