修改了day的七天使用同一个Fragment显示，使用Glide加载gif动态图，因为ImageView本身不能加载gif。获取bmob服务器数据健身动作动态图

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,10 @@
     <string name="zhiding">制定</string>
     <string name="makePlan">制定计划</string>
     <string name="addDongZuo">添加动作</string>
+    <string name="makePlanTip">点击上方圆圈"\n"开始生成计划"\n"未选中默认为休息天</string>
+    <string name="warm_up">热身</string>
+    <string name="stretching">拉伸</string>
+    <string name="main_action">具体动作</string>
+    <string name="relax_action">放松动作</string>
+    <string name="level">难度</string>
 </resources>
