--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,9 +12,9 @@
     <string name="BodyLabel8">低脂肪</string>
     <string name="BodyLabelByYourself">自定</string>
     <string name="BodyEditHint">请输入</string>
-    <string name="my_index">我的主页</string>
-    <string name="my_statistics">我的统计</string>
-    <string name="my_manage">我的管理</string>
+    <string name="my_home">我的主页</string>
+    <string name="my_news">新闻资讯</string>
+    <string name="my_shoucang">我的收藏</string>
     <string name="plan">计划</string>
     <string name="student">学员</string>
     <string name="mine">我的</string>
@@ -55,4 +55,5 @@
     <string name="main_action">具体动作</string>
     <string name="relax_action">放松动作</string>
     <string name="level">难度</string>
+    <string name="newsTitle">新闻资讯</string>
 </resources>
