修正错误：bmob的查询方法中也有网络请求，网络请求是耗时操作，所以是在线程中完成的，因此更新UI界面时应该在查询方法里面加入handler发送消息

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,17 @@
     <string name="relax_action">放松动作</string>
     <string name="level">难度</string>
     <string name="newsTitle">新闻资讯</string>
+    <string name="choose_part">不限部位</string>
+    <string name="choose_equipment">不限机械</string>
+    <string name="choose_type">动作类型</string>
+    <string name="action_reshen">热身动作</string>
+    <string name="action_lashen">拉伸</string>
+    <string name="action_juti">具体动作</string>
+    <string name="action_fangsong">放松动作</string>
+    <string name="choose_level">全部难度</string>
+    <string name="level_type1">零基础</string>
+    <string name="level_type2">初学</string>
+    <string name="level_type3">进阶</string>
+    <string name="level_type4">强化</string>
+    <string name="level_type5">挑战</string>
 </resources>
