--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,19 +50,36 @@
     <string name="makePlan">制定计划</string>
     <string name="addDongZuo">添加动作</string>
     <string name="makePlanTip">点击上方圆圈"\n"开始生成计划"\n"未选中默认为休息天</string>
+
     <string name="warm_up">热身</string>
     <string name="stretching">拉伸</string>
     <string name="main_action">具体动作</string>
     <string name="relax_action">放松动作</string>
     <string name="level">难度</string>
     <string name="newsTitle">新闻资讯</string>
+
     <string name="choose_part">不限部位</string>
-    <string name="choose_equipment">不限机械</string>
+    <string name="xiongbu">胸部</string>
+    <string name="beibu">背部</string>
+    <string name="tuibu">腿部</string>
+    <string name="gongerji">肱二头肌</string>
+    <string name="gongsanji">肱三头肌</string>
+    <string name="qianbi">前臂</string>
+    <string name="jianbu">肩部</string>
+    <string name="fubu">腹部</string>
+
+    <string name="choose_equipment">不限器械</string>
+    <string name="yali">哑铃</string>
+    <string name="wuqixie">无器械</string>
+    <string name="jianshenfang">健身房器械</string>
+    <string name="gangling">杠铃</string>
+
     <string name="choose_type">动作类型</string>
     <string name="action_reshen">热身动作</string>
     <string name="action_lashen">拉伸</string>
     <string name="action_juti">具体动作</string>
     <string name="action_fangsong">放松动作</string>
+
     <string name="choose_level">全部难度</string>
     <string name="level_type1">零基础</string>
     <string name="level_type2">初学</string>
