微信文章可以用了，小细节没有到位，下次提交的是完成微信文章的小细节将UI设计好

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,6 +58,7 @@
     <string name="relax_action">放松动作</string>
     <string name="level">难度</string>
     <string name="newsTitle">健康资讯</string>
+    <string name="showx">详情</string>
 
     <string name="choose_part">不限部位</string>
     <string name="xiongbu">胸部</string>
